--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     </div>
                     <div class="row">
                     </div>
-
+                    <div id="chart"></div>
+                    <div id="radio"></div>
                 </div>
         
 
@@ -87,16 +88,15 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="js/sb-admin-2.min.js"></script>
 
-    <!-- Page level plugins -->
+
     <script src="vendor/chart.js/Chart.min.js"></script>
 
-    <!-- Page level custom scripts -->
+   
     <script src="js/demo/chart-area-demo.js"></script>
     <script src="js/demo/chart-pie-demo.js"></script>
 
