--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <script src="vendor/chart.js/Chart.min.js"></script>
 
    
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="js/demo/chart-area.js"></script>
+    <script src="js/demo/chart-pie.js"></script>
 
 </body>
 
