--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
                     </div>
                     <div class="row">
                     </div>
-                    <div id="chart"></div>
-                    <div id="radio"></div>
+                    <label for="publisher-select">Publisher:</label>
+                    <select id="publisher-select"></select>
+                    <div>
+                        <label for="alignment-select">Alignment:</label>
+                        <select id="alignment-select"></select>
+                    </div>
                 </div>
         
 
